# prawduct

./: .gitignore  CLAUDE.md  README.md  package-lock.json  project-state.yaml  pyproject.toml
.claude/: .session-governance.json  settings.json
.prawduct/: .session-handoff.md  .subagent-briefing.md  artifact-manifest.yaml  backlog.md  build-governance.md  change-log.md  critic-review.md  cross-cutting-concerns.md  learnings.md  observation-backlog-deferred.yaml  pr-review.md  project-definition.yaml  project-state.yaml  sync-manifest.json
agents/: README.md
docs/: doc-manifest.yaml  evaluation-methodology.md  glossary.md  high-level-design.md  principles.md  project-structure.md  quickstart.md  requirements.md  self-improvement-architecture.md  skill-authoring-guide.md  vision.md
eval-history/: background-data-pipeline-2026-02-11.md  family-utility-2026-02-10.md  family-utility-2026-02-11-2.md  family-utility-2026-02-11-3.md  family-utility-2026-02-11.md  static-personal-site-2026-02-10.md  terminal-arcade-game-2026-02-12.md
framework-observations/: 2026-02-11-automation-shape-testing-lens.yaml  2026-02-11-background-data-pipeline-eval.yaml  2026-02-11-documentation-consolidation-pattern.yaml  2026-02-11-eval-coordination-meta-learning.yaml  2026-02-11-family-utility-eval-full.yaml  2026-02-11-family-utility-eval.yaml  2026-02-11-immediate-fixes-implemented.yaml  2026-02-11-self-hosted-framework-development.yaml  2026-02-12-critic-reviews-were-skipped-entirely-during.yaml  2026-02-12-governance-gap-learning-integration.yaml  README.md  schema.yaml  (+27 more)
(+415 files in other folders)
