[project]
name = "prawduct"
version = "1.3.1"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pyyaml>=6.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-n", "auto",
    "--dist", "loadfile",
    "--timeout", "30",
    "--timeout-method", "thread",
]
